--- a/package.json
+++ b/package.json
@@ -1,51 +1,222 @@
 {
   "name": "z-rss",
-	"displayName": "z-rss",
-	"description": "",
-	"version": "0.0.1",
-	"engines": {
-		"vscode": "^1.69.0"
-	},
-	"categories": [
-		"Other"
-	],
-	"activationEvents": [
-        "onCommand:z-rss.helloWorld"
-	],
-	"main": "./dist/extension.js",
-	"contributes": {
-		"commands": [
-			{
-				"command": "z-rss.helloWorld",
-				"title": "Hello World"
-			}
-		]
-	},
-	"scripts": {
-		"vscode:prepublish": "yarn run package",
-		"compile": "webpack",
-		"watch": "webpack --watch",
-		"package": "webpack --mode production --devtool hidden-source-map",
-		"compile-tests": "tsc -p . --outDir out",
-		"watch-tests": "tsc -p . -w --outDir out",
-		"pretest": "yarn run compile-tests && yarn run compile && yarn run lint",
-		"lint": "eslint src --ext ts",
-		"test": "node ./out/test/runTest.js"
-	},
-	"devDependencies": {
-		"@types/vscode": "^1.69.0",
-		"@types/glob": "^7.2.0",
-		"@types/mocha": "^9.1.1",
-		"@types/node": "16.x",
-		"@typescript-eslint/eslint-plugin": "^5.27.0",
-		"@typescript-eslint/parser": "^5.27.0",
-		"eslint": "^8.16.0",
-		"glob": "^8.0.3",
-		"mocha": "^10.0.0",
-		"typescript": "^4.7.2",
-		"ts-loader": "^9.3.0",
-		"webpack": "^5.72.1",
-		"webpack-cli": "^4.9.2",
-		"@vscode/test-electron": "^2.1.3"
-	}
+  "displayName": "Z RSS",
+  "description": "Tiny Tiny RSS (tt-rss) for vscode",
+  "icon": "resources/rss.png",
+  "version": "1.0.0",
+  "license": "MIT",
+  "publisher": "aooiu",
+  "qna": "https://github.com/aooiuu/z-rss.git/issues",
+  "bugs": {
+    "url": "https://github.com/aooiuu/z-rss.git/issues",
+    "email": "aooiu@qq.com"
+  },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/aooiuu/z-rss.git"
+  },
+  "keywords": [
+    "rss",
+    "Tiny Tiny RSS",
+    "tt-rss",
+    "ttrss",
+    "feed",
+    "news",
+    "摸鱼"
+  ],
+  "engines": {
+    "vscode": "^1.68.0"
+  },
+  "categories": [
+    "Other"
+  ],
+  "activationEvents": [
+    "*"
+  ],
+  "main": "./dist/extension.js",
+  "scripts": {
+    "build": "vsce package",
+    "vscode:prepublish": "yarn run package",
+    "compile": "webpack",
+    "watch": "webpack --watch",
+    "package": "webpack --mode production --devtool hidden-source-map",
+    "compile-tests": "tsc -p . --outDir out",
+    "watch-tests": "tsc -p . -w --outDir out",
+    "pretest": "yarn run compile-tests && yarn run compile && yarn run lint",
+    "lint": "eslint src --ext ts",
+    "test": "node ./out/test/runTest.js"
+  },
+  "contributes": {
+    "configuration": {
+      "title": "z-rss",
+      "properties": {
+        "z-rss.url": {
+          "type": "string",
+          "default": "",
+          "description": ""
+        },
+        "z-rss.user": {
+          "type": "string",
+          "default": "",
+          "description": ""
+        },
+        "z-rss.password": {
+          "type": "string",
+          "default": "",
+          "description": ""
+        },
+        "z-rss.refreshInterval": {
+          "type": "integer",
+          "default": 3600,
+          "description": "refresh interval(s)"
+        },
+        "z-rss.hideImage": {
+          "type": "boolean",
+          "default": false,
+          "description": "hide image"
+        }
+      }
+    },
+    "commands": [
+      {
+        "command": "z-rss.signin",
+        "title": "signin",
+        "icon": "$(sign-in)"
+      },
+      {
+        "command": "z-rss.signout",
+        "title": "signout",
+        "icon": "$(sign-out)"
+      },
+      {
+        "command": "z-rss.getFeedList",
+        "title": "refresh",
+        "icon": "$(refresh)"
+      },
+      {
+        "command": "z-rss.getArticleList",
+        "title": "refresh",
+        "icon": "$(refresh)"
+      },
+      {
+        "command": "z-rss.markAsRead",
+        "title": "mark as read",
+        "icon": "$(check-all)"
+      },
+      {
+        "command": "z-rss.star",
+        "title": "star",
+        "icon": "$(star)"
+      },
+      {
+        "command": "z-rss.unstar",
+        "title": "unstar",
+        "icon": "$(star-full)"
+      },
+      {
+        "command": "z-rss.viewInBrowser",
+        "title": "view in browser",
+        "icon": "$(globe)"
+      },
+      {
+        "command": "z-rss.subscribeToFeed",
+        "title": "subscribe to feed"
+      },
+      {
+        "command": "z-rss.unsubscribeFeed",
+        "title": "unsubscribe feed"
+      }
+    ],
+    "viewsContainers": {
+      "activitybar": [
+        {
+          "id": "z-rss",
+          "title": "Z RSS",
+          "icon": "resources/rss.svg"
+        }
+      ]
+    },
+    "views": {
+      "z-rss": [
+        {
+          "id": "z-rss-feeds",
+          "name": "Feeds"
+        },
+        {
+          "id": "z-rss-articles",
+          "name": "Articles"
+        }
+      ]
+    },
+    "menus": {
+      "view/title": [
+        {
+          "command": "z-rss.signin",
+          "when": "view == z-rss-feeds",
+          "group": "navigation"
+        },
+        {
+          "command": "z-rss.getFeedList",
+          "when": "view == z-rss-feeds",
+          "group": "navigation"
+        },
+        {
+          "command": "z-rss.getArticleList",
+          "when": "view == z-rss-articles",
+          "group": "navigation"
+        },
+        {
+          "command": "z-rss.markAsRead",
+          "when": "view == z-rss-articles",
+          "group": "navigation"
+        }
+      ],
+      "view/item/context": [
+        {
+          "command": "z-rss.getArticleList",
+          "when": "view == z-rss-feeds",
+          "group": "inline"
+        },
+        {
+          "command": "z-rss.star",
+          "when": "view == z-rss-articles && viewItem == star",
+          "group": "inline"
+        },
+        {
+          "command": "z-rss.unstar",
+          "when": "view == z-rss-articles && viewItem == unstar",
+          "group": "inline"
+        },
+        {
+          "command": "z-rss.viewInBrowser",
+          "when": "view == z-rss-articles",
+          "group": "inline"
+        },
+        {
+          "command": "z-rss.markAsRead",
+          "when": "view == z-rss-feeds",
+          "group": "inline"
+        }
+      ]
+    }
+  },
+  "devDependencies": {
+    "@types/glob": "^7.2.0",
+    "@types/mocha": "^9.1.1",
+    "@types/node": "16.x",
+    "@types/vscode": "^1.68.0",
+    "@typescript-eslint/eslint-plugin": "^5.30.0",
+    "@typescript-eslint/parser": "^5.30.0",
+    "@vscode/test-electron": "^2.1.5",
+    "eslint": "^8.18.0",
+    "glob": "^8.0.3",
+    "mocha": "^10.0.0",
+    "ts-loader": "^9.3.1",
+    "typescript": "^4.7.4",
+    "webpack": "^5.73.0",
+    "webpack-cli": "^4.10.0"
+  },
+  "dependencies": {
+    "got": "^12.1.0"
+  }
 }
