--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -5,6 +5,7 @@
     "ecmaVersion": 6,
     "sourceType": "module"
   },
+  "extends": ["prettier", "plugin:prettier/recommended"],
   "plugins": ["@typescript-eslint"],
   "rules": {
     "@typescript-eslint/naming-convention": "off",
